fix graphic overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -74,11 +74,13 @@ section
 // BUILDING BLOCKS
 .graphic
   position: absolute
-  top: 0
+  top: 50%
+  transform: translateY(-50%)
   left: 0
   bottom: 0
   width: 100%
   height: 100%
+  max-height: 100vh
   display: flex
   justify-content: center
   align-items: center
